src/examples/valid/bool-int.ra
func main(): void {
  if (1 == true) {
    print(1);
  }
  if (1 == 1.0) {
    print(2);
  }
  if (1 == "1") {
    print(3);
  }
}
