src/examples/invalid/static/redefine-variable-type.ra
func main(): void {
  a = "true";
  a = false;
}
